--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -1,5 +1,5 @@
 psycopg2-binary
-django==1.11.18
+django>=1.11.22
 django-braces==1.9.0
 django-model-utils==1.4.0
 django-pipeline==1.6.14
@@ -20,7 +20,7 @@ django-allauth==0.35.0
 git+https://github.com/soynatan/django-easy-audit.git
 django-grappelli==2.11.1
 
-djangorestframework==3.7.7
+djangorestframework==3.9.1
 djangorestframework-gis==0.13
 django-colorfield==0.1.15
 django-filter==1.1.0
