--- a/deployment/production/REQUIREMENTS.txt
+++ b/deployment/production/REQUIREMENTS.txt
@@ -40,7 +40,7 @@ django-modelsdoc==0.1.9
 
 # contacts page
 django-contact-us==0.4.1
-Pillow==5.1.0
+pillow>=6.2.0
 django-ordered-model==1.4.3
 
 # prometheus monitoring support
