--- a/bims/package.json
+++ b/bims/package.json
@@ -31,23 +31,20 @@
     "async": "^2.1.2",
     "axios": "^0.21.4",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.0",
+    "babel-jest": "^27.4.6",
     "babel-loader": "^8.0.0-beta.4",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "clipboard": "^1.7.1",
     "core-js": "^3.12.1",
-    "css-loader": "^0.25.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.15.1",
+    "css-loader": "^6.5.1",
     "exifr": "^6.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "fbemitter": "^2.1.1",
     "file-loader": "^0.9.0",
     "file-saver": "^2.0.2",
     "gl-matrix": "^2.3.2",
     "history": "^4.7.2",
     "immutability-helper": "^2.0.0",
-    "jest": "^23.4.1",
+    "jest": "^27.4.7",
     "json-loader": "^0.5.4",
     "mini-css-extract-plugin": "^2.2.1",
     "object.values": "^1.0.3",
@@ -67,8 +64,8 @@
     "sinon": "^4.0.0",
     "statuses": "^1.3.1",
     "style-loader": "^0.13.1",
+    "terser-webpack-plugin": "^5.3.0",
     "tween.js": "^16.6.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^4.1.1",
     "webpack": "^5.50.0",
     "webpack-bundle-clean": "0.0.7",
@@ -77,6 +74,6 @@
   },
   "devDependencies": {
     "react-hot-loader": "^4.13.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.7.3"
   }
 }
